<resources>
    <string name="app_name">Thesis_Application</string>
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="text_register_button">Don`t have an account?</string>
    <string name="textview_login">Login</string>
    <string name="textview_password">Password (min 6 characters)</string>
    <string name="textview_email">Email</string>
    <string name="email">sample@gmail.com</string>
    <string name="username">Username</string>
    <string name="Fname">Full name</string>
    <string name="ContactNum">Contact Number</string>
    <string name="age">Birth Date</string>
    <string name="password">Password</string>
    <string name="check_password">Re-enter password</string>
    <string name="get_Address">Street / Subdivision / Compound</string>
    <string name="zip_Code">Zip Code</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="usertype">Type of user.</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="unit">
        <item>Cubic meter</item>
        <item>SquareMeter</item>
        <item>Meter</item>
    </string-array>
    <string-array name="userTypes">
        <item>Clients</item>
        <item>Employees</item>
    </string-array>
    <string-array name="jobs">
        <item>Labor</item>
        <item>Carpenter</item>
        <item>Welder</item>
        <item>Plumber</item>
        <item>Painter</item>
        <item>Electrician</item>

    </string-array>
    <string name="Scope_of_work">Scope of work.</string>
    <string-array name="scopeofwork">
        <item>Site Preparation</item>
        <item>Carpentry Works</item>
        <item>Mechanical/Metal Works</item>
        <item>Plumbing Works</item>
        <item>Electrical Works</item>
        <item>Painting Works</item>
    </string-array>

    <string name="type_of_work">Type of work.</string>

    <string-array name="SitePreparations">
        <item>L - Filling and backfilling works</item>
        <item>L - Excavation of soil and/or Footing Excavation</item>
        <item>L - Gravel bedding</item>
        <item>L - Chipping of slab</item>
        <item>L - Chipping of existing tiles</item>
        <item>L - Chipping of existing slab for ducting</item>
        <item>L - Demolish existing ceiling and wood truss</item>
        <item>L - Demolish existing accordion door</item>
        <item>L - Demolish front wall</item>
        <item>L - Demolish existing staircase/stairway</item>
        <item>L - Demolish existing grills</item>
        <item>L - Demolish dilapidated roofing</item>
        <item>L - Site Clearing/Hauling and Disposal works</item>
    </string-array>

    <string-array name="CarpentryWorks">
        <item>B2 - Carpentry Works for Main Counter</item>
        <item>B - Carpentry works for Ceiling, Parapet, and Canopy</item>
        <item>B - Carpentry Works - Construction of Dry Wall (Interior Wall and Partition)</item>
        <item>B - Carpentry Works - Construction of Exterior Wall using Rib type GI Sheet</item>
        <item>B - Carpentry Works - Wall Cabinet and Shelves at Sink Area Installation</item>
    </string-array>

    <string-array name="MechanicalMetalWorks">
        <item>C1 - Stainless works for Main Counter</item>
        <item>C - Mechanical/Metal Works - Welding works for Steel frame of Main Counter</item>
        <item>C - Mechanical/Metal Works - Fabrication of Steel Gate</item>
        <item>C - Mechanical/Metal Works - Fabrication of Steel columns and members</item>
        <item>C - Mechanical/Metal Works - 40cmx30cm steel louvers installation</item>
        <item>C - Mechanical/Metal Works - Installation of exhaust fans</item>
        <item>C - Mechanical/Metal Works - Fabrication and Installation of metal roll up door</item>
        <item>C - Mechanical/Metal Works - Menu Board Hooking and Installation</item>
        <item>C - Mechanical/Metal Works - Steel ramp fabrication</item>
        <item>C - Mechanical/Metal Works - LPG Cage Fabrication</item>
    </string-array>

    <string-array name="PlumbingWorks">
        <item>D2 - Pipeline and Fixture Installation</item>
        <item>D3 - Drainage Pipeline Installation</item>
    </string-array>

    <string-array name="ElectricalWorks">
        <item>E - Electrical Works - Main Line and Wiring Distribution System</item>
        <item>E - Electrical Works - Interior and Exterior Lightings</item>
    </string-array>

    <string-array name="PaintingWorks">
        <item>G1 - Plain Concrete Surfaces (Surface Prep - Primer - Finish Coat)</item>
        <item>G2 - Wooden_Metal Surfaces (Surface Prep - Primer - Finish Coat)s</item>
    </string-array>

    <string name="job_order">JOB ORDER.</string>
    <string name="register">Register</string>
    <string name="Error_Username">Username cannot be blank.</string>
    <string name="Error_Email">Email address cannot be blank.</string>
    <string name="Error_Password">Password Cannot be blank.</string>
    <string name="Error_Age">Age cannot be blank.</string>
    <string name="Error_Address">Address cannot be blank.</string>
    <string name="Error_firstName">First Name cannot be blank.</string>
    <string name="Error_lastName">Last Name cannot be blank.</string>
    <string name="house_number">House number and Lot number</string>
    <string name="barangay">Barangay</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip code</string>
    <string name="err_address">Please input all required address field.</string>
    <string name="resume">Resume:</string>
    <string name="upload">Upload.</string>
    <string name="filepath">File Path.</string>
    <string name="err_filepath">No file uploaded.</string>
    <string name="avatar">Add profile picture:</string>
    <string name="tv_jobtype">Select Job Type.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="update_general_information_about_you">Update general information about you.</string>
    <string name="personal_information">Personal information</string>
    <string name="manage_information_about_you_and_your_account_in_general">Manage information about you and your account in general</string>
    <string name="account_settings">Account Settings</string>
    <string name="security">Security</string>
    <string name="change_password_and_more">Change password and more.</string>
    <string name="security_and_login">Security and login</string>
    <string name="change_password_and_other_actions_to_add_more_security_to_your_account">Change password and other actions to add more security to your account.</string>
    <string name="area">Area</string>
    <string name="location">Location</string>
    <string name="employee">Employee</string>
    <string name="your_email_here">Your email here</string>
    <string name="your_name_here">Your Name here</string>
    <string name="title_of_project">Title of Project</string>
    <string name="submit">Submit</string>
    <string name="sub_division">Sub-division.</string>
    <string name="start_date">Start Date</string>
    <string name="Expectedfinishdate">Expected finish date</string>
    <string name="unit">Unit</string>
    <string name="db">DashBoard</string>
    <string name="dashboard_drawer">DashBoard</string>
    <string name="Maps_drawer">Maps</string>
    <string name="myTasks_drawer">My Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobtitle">JobTitle</string>
    <string name="NumberOfWorkers">Number of workers</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="notification">Notification</string>
    <string name="plumbing">Plumbing</string>
    <string name="job_type">Job Type.</string>
    <string name="job_id">Job ID:</string>
    <string name="name">Name:</string>
</resources>